--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   sqlite3: ^2.4.6
   google_maps_flutter: ^2.10.0
   provider: ^6.1.2
+  mockito: ^5.4.4
 
 dev_dependencies:
   flutter_test:
